Updates based on testing

--- a/about.html
+++ b/about.html
@@ -87,6 +87,9 @@
               <a href="/" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Home</a>
             </li>
             <li class="nav-item">
+              <a href="/#work" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Work</a>
+            </li>
+            <li class="nav-item">
               <a href="about" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">About</a>
             </li>
           </ul>
@@ -392,7 +395,9 @@
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a>
+                <li class="nav-item"><a href="/#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
               </ul>
             </div>
           </div>
