--- a/nutrics.html
+++ b/nutrics.html
@@ -130,6 +130,9 @@
                   <a href="/" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Home</a>
                 </li>
                 <li class="nav-item">
+                  <a href="/#work" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">Work</a>
+                </li>
+                <li class="nav-item">
                   <a href="about" class="nav-link" data-toggle="dropdown-grid" aria-expanded="false" aria-haspopup="true">About</a>
                 </li>
               </ul>
@@ -160,8 +163,8 @@
 
 
 
-            <!-- <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#12895d">interactive demo</span> and <span style="color:#12895d">presentation</span> of my thesis below.</h5> -->
-            <h5 class="pt-1"><span class="low">Nutrics helps you <span style="color:#12895d">discover new food</span> by <span style="color:#12895d">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
+            <!-- <h5 class="pt-3"><span class="low">Please enjoy an <span style="color:#10A09B">interactive demo</span> and <span style="color:#10A09B">presentation</span> of my thesis below.</h5> -->
+            <h5 class="pt-1"><span class="low">Nutrics helps you <span style="color:#10A09B">discover new food</span> by <span style="color:#10A09B">adapting to your tastes</span> with artificial intelligence. It suggests meals you'll love - not menus.</h5>
             <h5 class="pt-1"><span class="low">I built this app with data scientists and computer engineers at the <a href="http://dunn.pratt.duke.edu/" target="blank" >Big Ideas Lab</a> and behavioral psychologists at the <a href="https://advanced-hindsight.com/" target="blank">Center for Advanced Hindsight</a>. I created the visual design, built live mockups in Adobe XD for user testing, and contributed to the feature engineering process which informs the predictive models.</h5>
 
         </div>
@@ -170,10 +173,10 @@
             <h2 style="color:#10A09B;">Interactive demo</h2>
           </div>
 
-          <h5 class=""><span class="low">The following interactive demo shows the UI, look for the full version on your app store soon!</h5>
+          <h5 class=""><span class="low">Feel free to explore the UI and be sure to look for the full version on your app store soon!</h5>
 
           <div class="row mt-3 pl-2 col-auto justify-content-center">
-            <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
+            <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
             </div>
 
             <div class="row pt-1 pl-2 col-auto justify-content-center">
@@ -232,7 +235,9 @@
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a>
+                <li class="nav-item"><a href="/#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
               </ul>
             </div>
           </div>
