--- a/shyft.html
+++ b/shyft.html
@@ -205,7 +205,7 @@ font-size: 3rem;
       </div>
       <div class="container">
         <div class="row justify-content-center" style="position: relative; top:25vh;">
-          <div class="col-auto pl-4 pr-4">
+          <div class="col-auto">
 
             <h1 style="font-weight:lighter">Designing an accessible ridesharing app</h1>
               </div>
@@ -221,12 +221,12 @@ font-size: 3rem;
           <div class="col-xl-8 col-lg-8 col-md-10">
             <article class="article">
 
-              <div class="row justify-content-center mt-7 mb-7">
-                <div class="col-auto">
-                  <img src="assets/img/shyft-logo.png" class="icon icon-lg">
+              <div class="row mr-3 mt-7 mb-7">
+                <div class="pl-3">
+                  <img src="assets/img/shyft-logo.png" class="icon icon-xl">
                 </div>
 
-                  <div class="col-auto my-auto">
+                  <div class="mx-3 my-auto">
                     <h1 class="mt-3 mb-1">Shyft</h1>
                     <h4 style="font-weight:lighter">
                       Accessible ridesharing for seniors
@@ -442,7 +442,9 @@ font-size: 3rem;
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a>
+                <li class="nav-item"><a href="/#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
               </ul>
             </div>
           </div>
