--- a/focuspack.html
+++ b/focuspack.html
@@ -170,7 +170,7 @@
       </div>
       <div class="container">
         <div class="row justify-content-center" style="position: relative; top:20vh;">
-          <div class="col-lg-10 col-xl-8">
+          <div class="col-12 text-md-center">
 
             <h1 style="font-weight:lighter">Introducing: Mindfulness on Your Phone</h1>
               </div>
@@ -187,15 +187,15 @@
             <article class="article">
               <div class="row justify-content-center mt-7 mb-4">
                 <div class="col-auto">
-                  <img src="assets/img/logos/focusPack.png" alt="Logo" class="icon icon-lg">
+                  <img src="assets/img/logos/focusPack.png" alt="Logo" class="icon icon-xl">
                 </div>
               </div>
               <div class="row justify-content-center text-center">
-                <div class="col-lg-9 col-xl-8 pl-2 pr-2">
+                <div class="col-12 px-0">
                   <h1 style="font-weight:lighter">Focus Pack <span <h1 style="font-weight:bold">for Strava</span></h1>
                 </div>
 
-                <h1 class="text-center mt-6 pl-3 pr-3" style="font-weight:lighter">
+                <h1 class="text-center mt-4 pl-3 pr-3" style="font-weight:lighter">
                   See the impact of your mind.
                 </h1>
 
@@ -379,7 +379,9 @@
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a>
+                <li class="nav-item"><a href="/#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
               </ul>
             </div>
           </div>
@@ -418,7 +420,6 @@
           </div>
         </div>
       </footer>
-
 
 
 
