--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="container">
           <div class="row justify-content-center">
             <div class="col">
-              <h2 class="text-secondary" style="font-weight:500">A few of my projects</h2>
+              <h2 class="text-secondary" style="font-weight:500"><a id="work">A few of my projects</a></h2>
               <div class="row">
                 <div class="col-md-6 col-lg-6">
                   <div class="card shadow-lg">
@@ -283,7 +283,9 @@
               <ul class="nav justify-content-center">
                 <li class="nav-item"><a href="/" class="nav-link">Home</a>
                 </li>
-                <li class="nav-item"><a href="about" class="nav-link">About</a>
+                <li class="nav-item"><a href="/#work" class="nav-link">Work</a>
+                </li>
+                <li class="nav-item"><a href="about" class="nav-link">About</a></li>
               </ul>
             </div>
           </div>
