Home page role/about buttons

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           <!-- <a href="#" class="btn btn-outline-primary mt-3">
     What I do
     </a> -->
-    <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-outline-primary mt-3">
+    <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-primary mt-3">
         <span>View Resume</span>
       </a>
         </div>
@@ -170,7 +170,7 @@
             <h3 class="mb-1">Runner, Tech nerd</h3>
           </div>
           <span class="text-secondary">Early adoption is my middle name</span>
-          <a href="about" class="btn btn-outline-primary mt-3">
+          <a href="about" class="btn btn-primary mt-3">
     Skills and experience
     </a>
         </div>
