Small fixes - buttons, layout

--- a/nutrics.html
+++ b/nutrics.html
@@ -169,7 +169,7 @@
 
         </div>
 
-        <div class="row col-6 mt-4">
+        <div class="row mt-4">
             <h2 style="color:#10A09B;">Interactive demo</h2>
           </div>
 
