--- a/nutricsMobile.html
+++ b/nutricsMobile.html
@@ -158,7 +158,7 @@
           <div class="row px-2 pt-5">
               <div class="hi2" style="line-height:1"><img class="mb-2 mr-2" src="assets/img/logos/nutrics.svg" alt="">Nutrics <span class="h2 mid">AI Powered Meal Suggestions</span> </div>
 
-          <div class="row col-6 mt-4 pl-2">
+          <div class="row col mt-4 pl-2">
               <h2 style="color:#10A09B;">Interactive demo</h2>
             </div>
 
