--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     What I do
     </a> -->
     <a href="assets/downloads/bolickResume.pdf" target="_blank" class=" btn btn-primary mt-3">
-        <span>View Resume</span>
+        <span>View resume</span>
       </a>
         </div>
       </div>
@@ -180,11 +180,11 @@
 </section>
 
 
-      <section class="mt-6">
+      <section class="mt-3">
         <div class="container">
           <div class="row justify-content-center">
             <div class="col">
-              <h2 class="text-secondary" style="font-weight:500"><a id="work">A few of my projects</a></h2>
+              <h2 class="text-secondary mt-3 mb-3" style="font-weight:500"><a id="work">A few of my projects</a></h2>
               <div class="row">
                 <div class="col-md-6 col-lg-6">
                   <div class="card shadow-lg">
