--- a/mindfulrunning.html
+++ b/mindfulrunning.html
@@ -100,9 +100,9 @@
     <div class="article-progress" data-sticky="below-nav" style="opacity:0.95">
       <progress class="reading-position" value="0"></progress>
       <div class="article-progress-wrapper">
-        <div class="container">
+        <div class="container py-0">
           <div class="row">
-            <div class="col py-2">
+            <div class="col py-1">
               <!-- <div class="d-flex justify-content-between align-items-center">
                 <div class="d-flex">
                   <div class="text-small text-muted mr-1">Reading:</div>
