--- a/nutrics.html
+++ b/nutrics.html
@@ -144,7 +144,7 @@
 
 
 
-    <section class="pt-5 pb-0">
+    <section class="col-auto pt-5 pb-0">
       <div class="containernarrow">
     <!-- <div class="card card-body justify-content-between bg-white"> -->
         <div class="row px-2 pt-5">
@@ -169,17 +169,20 @@
 
         </div>
 
-        <div class="row mt-4">
+        <div class="row col mt-4">
             <h2 style="color:#10A09B;">Interactive demo</h2>
           </div>
 
           <h5 class=""><span class="low">Feel free to explore the UI and be sure to look for the full version on your app store soon!</h5>
 
-          <div class="row mt-3 pl-2 col-auto justify-content-center">
-            <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
+
             </div>
 
-            <div class="row pt-1 pl-2 col-auto justify-content-center">
+            <div class="row mt-3 pl-2 col-auto justify-content-center">
+              <span class="btn"><i class="fa fa-check-circle-o fa-lg pr-2" style="color:#149666"></i>Page optimized for<i class="fas fa-desktop fa-lg" style="padding-left:.4em"></i> <i class="fab fa-chrome fa-lg pl-1"></i><i class="fab fa-firefox-browser fa-lg pl-1"></i><i class="fab fa-edge fa-lg pl-1"></i></span>
+              </div>
+
+            <div class="row pt-1 col-auto justify-content-center">
               <a href="nutricsMobile" class="btn btn-outline-primary" >Try it for<i class="fas fa-mobile-alt fa-lg" style="padding-left:.4em"></i><i class="fab fa-safari fa-lg pl-1"></i></a>
             </div>
 
@@ -202,8 +205,6 @@
           <iframe width="375" height="812" src="https://xd.adobe.com/embed/c744a994-3e6c-44b6-5d66-c5fecdb4b5f4-b175/?fullscreen" frameborder="0"></iframe>
         </div> -->
 
-
-        </div>
 
 
     <!-- <section>
