--- a/scorereport.html
+++ b/scorereport.html
@@ -235,7 +235,7 @@ font-size: 3rem;
     <div class="article-progress" style="opacity:0.95;">
       <progress class="reading-position" value="0"></progress>
       <div class="article-progress-wrapper">
-        <div class="container">
+        <div class="container py-0">
           <div class="row">
             <div class="col py-1">
               <!-- <div class="d-flex justify-content-between align-items-center">
