home layout reorder. uiux add project (drie)

--- a/uiux.html
+++ b/uiux.html
@@ -193,6 +193,23 @@
                     </div>
                 </div>
 
+                <!-- INFINITY AI - uiux -->
+                <div class="flex-row pt-3">
+                    <div class="card hover-shadow-3d">
+                        <div class="card-body align-items-start">
+                            <h4 class="mb-3">Drie Design site</h4>
+                            <!-- <p class="text-muted">UI/UX Design</p> -->
+                            <p>
+                                Website design, development, and deployment for UI/UX consultancy firm.
+                            </p>
+                            <a href="https://drie.design/" target="_blank" class="stretched-link">View site ↗</a>
+                        </div>
+                        <a href="https://drie.design/" target="_blank" class="mb-5 pb-5">
+                            <img src="assets/img/drie_bg.gif" alt="Image" class="">
+                        </a>
+                    </div>
+                </div>
+
                 <!-- STRAVA - uiux -->
                 <div class="flex-row pt-3">
                     <div class="card hover-shadow-3d">
@@ -200,7 +217,7 @@
                             <h4 class="mb-3">Mindfulness with Strava</h4>
                             <!-- <p class="text-muted">UI/UX Design</p> -->
                             <p>
-                                Find new focus and build mindful habits by looking at data in a new way.
+                                Build mindful habits by looking at data in a new way.
                             </p>
                             <a href="uiux-focus-pack" class="stretched-link">Learn more</a>
                         </div>
