add infinity ai, homepage card bug fix

--- a/about.html
+++ b/about.html
@@ -184,11 +184,12 @@
                                             <h2 class="text-primary" style="font-weight:500">About me</h2>
                                         </div>
                                         <p class="lead mt-2">
-                                            I'm an <b>engineer</b> and <b>designer</b> with a passion for <b>research driven</b> innovation and <b>user-centric</b> implementation. Currently, I'm improving the tools that keep businesses running as a Senior
-                                            UX Designer at HCL Software.</p>
+                                            I'm an <b>engineer</b> and <b>designer</b> with a passion for <b>research driven</b> innovation and <b>user-centric</b> implementation.
+                                            <br><br> Currently, I'm part of the team at <a href="https://infinity.ai" target="_blank">Infinity AI</a> where I build sythentic data APIs for ML models and web tools such as the <a href="https://marketplace.infinity.ai/collections/all"
+                                                target="_blank">Infinty AI Marketplace</a>.</p>
                                         <p class="lead mt-3">
-                                            I've created design systems, designed FDA cleared surgical instruments, apps, enterprise software, and more. This breadth of experience has taught me to <b>ask questions</b>. Questions - not answers - have led
-                                            to some of the best designs I've been a part of.</p>
+                                            I've created design systems, designed FDA cleared surgical instruments, apps, enterprise software, APIs, and more. This breadth of experience has taught me to <b>ask questions</b>. Questions - not answers -
+                                            have led to some of the best designs I've been a part of.</p>
                                         <p class="lead mb-0"></p>
                                         <p class="lead mt-3">
                                             Trail running, cycling, and crazy adventures keep my mind and body sharp when not designing (although sometimes these intersect with my <a href="mindfulrunning" target=blank>designs</a>).</p>
@@ -248,7 +249,7 @@
                             </div>
                             <div class="col-auto">
                                 <div>
-                                    <span class="text-primary-2">HTML5/CSS, JavaScript, React, Android Studio (Kotlin), Xcode (Swift), Git/GitHub</span>
+                                    <span class="text-primary-2">Python, HTML5/CSS, JavaScript, Liquid, React, Kotlin, Swift, Git/GitHub</span>
                                 </div>
                             </div>
                         </div>
@@ -325,13 +326,13 @@
                         </div> -->
 
                         <div class="col-12 px-0 mb-3">
-                            <h5 class="mb-1" style="color:#d13584"><a style="color:#f7f7f7">Infinity AI</a></h5>
-                            <h6 class="mb-0" style="color:#f7f7f7">Technical Artist <span class="h6" style="color:#f7f7f7">2022</span></h6>
+                            <h5 class="mb-1"><a href="https://infinity.ai" target="_blank" style="color:#d13584">Infinity AI</a></h5>
+                            <h6 class="mb-0">Technical Artist <span class="h6" style="color:grey">2022</span></h6>
                         </div>
 
                         <div class="col-12 px-0 mb-3">
                             <h5 class="mb-1" style="color:#0066b3"><a href="https://www.hcltechsw.com/" target="blank" style="color:#0066b3">HCL Software</a></h5>
-                            <h6 class="mb-0">Senior UX Designer <span class="h6" style="color:grey">2020- <span style="color:#f7f7f7">2022</span></span>
+                            <h6 class="mb-0">Senior UX Designer <span class="h6" style="color:grey">2020 - 2022</span>
                             </h6>
                         </div>
 
