--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         
         @media screen and (min-width: 551px) and (max-width: 960px) {
             .card {
-                min-height: 45vh;
+                min-height: auto;
                 min-width: 40vw;
                 margin-right: 12px;
             }
