--- a/about.html
+++ b/about.html
@@ -185,7 +185,7 @@
                                         </div>
                                         <p class="lead mt-2">
                                             I'm an <b>engineer</b> and <b>designer</b> with a passion for <b>research driven</b> innovation and <b>user-centric</b> implementation.
-                                            <br><br> Currently, I'm part of the team at <a href="https://infinity.ai" target="_blank">Infinity AI</a> where I build sythentic data APIs for ML models and web tools such as the <a href="https://marketplace.infinity.ai/collections/all"
+                                            <br><br> Currently, I'm part of the team at <a href="https://infinity.ai" target="_blank">Infinity AI</a> where I build synthentic data generator APIs for ML models and web tools such as the <a href="https://marketplace.infinity.ai/collections/all"
                                                 target="_blank">Infinty AI Marketplace</a>.</p>
                                         <p class="lead mt-3">
                                             I've created design systems, designed FDA cleared surgical instruments, apps, enterprise software, APIs, and more. This breadth of experience has taught me to <b>ask questions</b>. Questions - not answers -
