fix footer cta links

--- a/index.html
+++ b/index.html
@@ -658,14 +658,14 @@
 
                             <ul class="nav d-inline-flex gap-2">
                                 <li>
-                                    <button type="button" class="btn btn-secondary btn-icon rounded-pill">
+                                    <a href="mailto:ryanjbolick@gmail.com" target="_blank" type="button" class="btn btn-secondary btn-icon rounded-pill">
                                   <i class="ai-mail"></i>
-                                </button>
+                                    </a>
                                 </li>
                                 <li>
-                                    <button type="button" class="btn btn-secondary btn-icon rounded-pill">
+                                    <a href="https://www.linkedin.com/in/rjbolick/" target="_blank" type="button" class="btn btn-secondary btn-icon rounded-pill">
                                 <i class="ai-linkedin"></i>
-                              </button>
+                                    </a>
                                 </li>
                             </ul>
 
